--- a/index.html
+++ b/index.html
@@ -40,26 +40,20 @@
         </section>
         <section class="hero2">
             <div class="hero2__container">
-                <ul class="hero2__list">
-                    <li class="hero2__item"><a href="#" data-index="0">Rostov-on-Don, Admiral</a></li>
-                    <li class="hero2__item"><a href="#" data-index="1">Sochi Thieves</a></li>
-                    <li class="hero2__item"><a href="#" data-index="2">Rostov-on-Don Patriotic</a></li>
-                </ul>
-                <div class="hero2__subcontainer">
-                <div class="hero2__information">
-                <h1 class="title"><span class="hero__title">Completed projects</span></h1>
-                <hr class="block-2__line">
-                <p class="hero2__text">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction 
-                    market we have made happy more than 1000 families</p>
-                <div class="hero2__info">
-                    <div  class="hero2__info2">
+                <div class="hero2__box">
+                    <h1 class="title"><span class="hero__title">Completed projects</span></h1>
+                    <hr class="block-2__line"> 
+                    <p class="hero2__text">Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction 
+                  market we have made happy more than 1000 families</p>
+                    <div class="hero2__info">
+                        <div  class="hero2__info2">
                         <h3  class="hero2__subtitle"> 
                             City:
                         </h3>
                         <p id="city"  class="hero2__description">
                             Rostov-on-Don<br> LCD admiral
                         </p>
-                    </div>
+                        </div>
                     <div class="hero2__info2">
                         <h3 class="hero2__subtitle"> 
                             Apartment area:
@@ -83,29 +77,35 @@
                         <p id="cost" class="hero2__description">
                             Upon request
                         </p>
-                </div>
-                <div class="hero2__arrows">
-                    <button class="hero2__arrow left"  type="button">
+                    </div>
+                    </div>
+                    <div class="hero2__arrows">
+                        <button class="hero2__arrow left"  type="button">
                         <svg  width="42" height="14" viewBox="0 0 42 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.63807 13.2761L2.308e-05 6.63808L6.63807 3.84663e-05L7.58563 0.947606L1.89516 6.63808L7.58563 12.3286L6.63807 13.2761Z" fill="white"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M0.94758 5.96828L41.4556 5.96829L41.4556 7.30835L0.94758 7.30834L0.94758 5.96828Z" fill="white"/>
                         </svg>
-                    </button>
-                    <div class="hero2__dots">
-                        <div class="slider__dots" data-index="0"></div>
+                        </button>
+                        <div class="hero2__dots" type="button">
+                        <div class="slider__dots" data-index="0 active"></div>
                         <div class="slider__dots" data-index="1"></div>
                         <div class="slider__dots" data-index="2"></div>
-                    </div>
-                    <button class="hero2__arrow right" type="button">
+                        </div>
+                        <button class="hero2__arrow right" type="button">
                         <svg  width="42" height="14" viewBox="0 0 42 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M35.0451 0L41.6831 6.63804L35.0451 13.2761L34.0975 12.3285L39.788 6.63804L34.0975 0.947567L35.0451 0Z" fill="white"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M40.7356 7.30784L0.227569 7.30784L0.22757 5.96777L40.7356 5.96778L40.7356 7.30784Z" fill="white"/>
                         </svg>
                     </button>
-                </div>
-                </div>
+                    </div>
+                </div> 
+                <div class="hero2__slider">
+                    <ul class="hero2__list">
+                    <li class="hero2__item"><a href="#" data-index="0">Rostov-on-Don, Admiral</a></li>
+                    <li class="hero2__item"><a href="#" data-index="1">Sochi Thieves</a></li>
+                    <li class="hero2__item"><a href="#" data-index="2">Rostov-on-Don Patriotic</a></li>
+                </ul>
                 <div class="slider-img">
-
                 </div>
                 </div>
             </div>
